tests/paczka1/small_fuzzy/68834958.err
Error in line 4: SLE26EvCSqN S635 76,6
Error in line 6: SLE26EvCSqN S97 69,2
Error in line 12: fgCHv2p S635 28,5
